# explained-geospatial

./: .gitignore  README.md  hello.py  pyproject.toml
data/processed/: estados_exemplo.dbf
notebooks/1_fundamentos/: 01_introducao_dados_geoespaciais.ipynb  02_sistemas_coordenadas_projecoes.ipynb  03_formatos_dados_espaciais.ipynb
notebooks/2_dados_vetoriais/: 01_geojson_estrutura_manipulacao.ipynb  02_operacoes_basicas_geopandas.ipynb  03_operacoes_avancadas_geopandas.ipynb
notebooks/3_dados_matriciais/: 01_introducao_rasterio.ipynb  02_processamento_dados_raster.ipynb
notebooks/4_integracao_visualizacao/: 01_visualizacao_dados_geoespaciais.ipynb  02_integracao_dados_vetoriais_matriciais.ipynb
utils/: readme_content.py
